# esim-mailer

./: Cargo.toml
.github/workflows/: audit.yml  build-and-release.yml  build.yml  coverage.yml  pr-checks.yml  rust-clippy.yml
