[package]
name = "esim-mailer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
eframe = { version = "0.32.3", features = ["persistence"] }
lettre = "0.11.19"
oauth2 = { version = "5.0", features = ["reqwest-blocking"] }
once_cell = "1.21.3"
rand = "0.9.2"
rfd = "0.15.4"
serde = "1.0.219"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
url = "2.5.2"
uuid = { version = "1.17.0", features = ["v4"] }
webbrowser = "1.0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
aes-gcm = "0.10.3"
dotenvy = "0.15.7"
rand = "0.9.2"
winres = "0.1.12"
